--- a/cyberdrishti-frontend/package.json
+++ b/cyberdrishti-frontend/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^3.31.0",
     "axios": "^1.8.3",
     "d3": "^7.9.0",
+    "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
